# lp-0017-whistleblower

./: .gitignore  AUDIO_SCRIPT_CURRENT_VERIFY_TESTNET.md  BENCHMARKS.md  BUGS_FILED.md  Cargo.toml  DEMO.md  DEPLOYMENT.md  LICENSE-APACHE  LICENSE-MIT  README.md  REGISTRY_SPIKE.md  TESTNET_PROOF.md  VOICEOVER.md  flake.nix  module.json  scaffold.toml  whistleblower-registry-idl.json  whistleblower-registry.idl.json
.github/workflows/: ci.yml
adapters/lez/: Cargo.toml
adapters/lez/src/: lib.rs
adapters/lez/tests/: live_registry.rs
adapters/logos/: Cargo.toml  README.md
adapters/logos/src/: lib.rs
adapters/mock/: Cargo.toml
adapters/mock/src/: lib.rs
adapters/qt/: NOTES.md
anchor_spike/: Cargo.toml
anchor_spike/src/: main.rs
batch/: Cargo.toml
batch/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
core/tests/: registry_idempotency_spike.rs  registry_instruction.rs
demo/: sample-envelopes.jsonl
docs/: FINAL_DEMO_TRANSCRIPT.md
docs/upstream-issues/: 01-logos-scaffold-template-runner-api-rot.md  02-logos-liblogos-gtest-timeout.md  03-logos-delivery-module-librln-missing.md  04-spel-idlseed-hashed-seed.md  05-lez-testnet-cu-not-persisted.md  README.md
idl/: whistleblower_registry.rs
indexing/: API.md  Cargo.toml
indexing/src/: batch.rs  file_delivery.rs  lib.rs  orchestration.rs  publisher.rs  retry.rs  traits.rs
indexing/tests/: adapter_contract.rs  batch_loop.rs  file_delivery.rs  publisher_e2e.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
scripts/: _idl_annotate.py  ci-verify-testnet.sh  demo.sh  fix_delivery_rln.sh  install-global-basecamp.sh  launch-global-basecamp.sh  measure_cu.sh  record-final-video.sh  regen-idl.sh  validate_demo_artifacts.py  validate_submission_docs.py  verify-testnet.sh
solutions/: LP-0017.md
ui/: CMakeLists.txt  README.md  flake.nix  manifest.json  metadata.json  module.json
ui/configs/: delivery_config.json  storage_config.json
ui/ffi/: Cargo.toml
ui/ffi/src/: lib.rs
ui/ffi/tests/: anchor_one_live.rs
ui/qml/: Main.qml
ui/src/: WhistleblowerBackend.cpp  WhistleblowerBackend.h  WhistleblowerPlugin.cpp  WhistleblowerPlugin.h  main.cpp
