[workspace]
resolver = "2"
members = [
    "core",
    "indexing",
    "adapters/mock",
    "batch",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tranquil-Flow/whistleblower"

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22"
borsh = { version = "1", features = ["derive"] }
futures = "0.3"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "1"
