[workspace]
resolver = "2"
members = [
    "core",
    "indexing",
    "adapters/mock",
    "adapters/lez",
    "batch",
    "methods",
    "methods/guest",
    "anchor_spike",
    "ui/ffi",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tranquil-Flow/whistleblower"

[workspace.dependencies]
# Core (host + guest)
async-trait = "0.1"
base64 = "0.22"
borsh = { version = "1", features = ["derive"] }
futures = "0.3"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "1"

# LEZ — pinned to v0.2.0-rc3 (= commit cf3639d8 = what the public testnet
# https://testnet.lez.logos.co/ runs). Bumped 2026-06-03 from v0.2.0-rc1
# (35d8df0d) so the deployed guest matches the testnet's nssa_core; the rc1
# binary differs by ~300 lines in core/src/program.rs and fails on testnet.
nssa = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
wallet = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
# `common` carries NSSATransaction; `sequencer_service_rpc` carries the
# RpcClient trait we need for sequencer_client.send_transaction / get_account.
common = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", package = "common" }
sequencer_service_rpc = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", package = "sequencer_service_rpc" }

# Risc0 (must match installed cargo-risczero version)
risc0-zkvm = { version = "=3.0.5", features = ["std"] }
risc0-build = "=3.0.5"

# SPEL framework (for #[lez_program] macros + IDL generation). Pinned to the
# `chore/bump-lez-to-v0.2.0-rc3` branch (31e52c52) — spel's own v0.2.0-rc.3 TAG
# still pins nssa_core back to rc1, so only this branch keeps nssa_core on rc3.
spel-framework = { git = "https://github.com/logos-co/spel.git", rev = "31e52c529baba2205eeeacf5bb52647e84236b94" }

# Build-time deps for guest programs
ruint = "=1.17.0"
