[package]
name = "anchor-spike"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "anchor_spike"
path = "src/main.rs"

[dependencies]
nssa_core = { workspace = true, features = ["host"] }
wallet.workspace = true
document-indexing = { path = "../indexing" }
whistleblower-core = { path = "../core" }
whistleblower-lez-adapter = { path = "../adapters/lez" }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
hex.workspace = true
