[package]
name = "anchor-spike"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "anchor_spike"
path = "src/main.rs"

# Public-testnet deploy + anchor-lifecycle driver. Deploys the rc3 guest with a
# typed ProgramDeploymentTransaction (capturing the deploy tx hash that
# `wallet deploy-program` discards), then runs the anchor lifecycle, capturing
# every tx hash so the evidence is chain-info-verifiable from any machine.
[[bin]]
name = "testnet_lifecycle"
path = "src/bin/testnet_lifecycle.rs"

# Deterministic CU measurement. Runs the *deployed* rc3 guest ELF through the
# same RISC0 executor the sequencer uses (nssa::Program::execute path), with no
# proving, and reports the user-cycle count for anchor_one / anchor_batch. The
# RISC0 executor is deterministic, so these cycle counts equal the on-chain CU
# the testnet sequencer charges for the identical (ELF, input). Read-only, no
# network/wallet — any reviewer can reproduce the exact numbers.
[[bin]]
name = "measure_cu_cycles"
path = "src/bin/measure_cu_cycles.rs"

[dependencies]
nssa_core = { workspace = true, features = ["host"] }
nssa.workspace = true
common.workspace = true
sequencer_service_rpc.workspace = true
wallet.workspace = true
document-indexing = { path = "../indexing" }
whistleblower-core = { path = "../core" }
whistleblower-lez-adapter = { path = "../adapters/lez" }
anyhow = "1"
borsh.workspace = true
risc0-zkvm.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
hex.workspace = true
