[package]
name = "whistleblower-batch"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "whistleblower-batch"
path = "src/main.rs"

[dependencies]
document-indexing = { path = "../indexing" }
whistleblower-core = { path = "../core" }
whistleblower-lez-adapter = { path = "../adapters/lez" }
whistleblower-mock-adapter = { path = "../adapters/mock" }
wallet.workspace = true
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
anyhow = "1"
