[package]
name = "document-indexing"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
futures.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["time", "sync", "rt", "macros"] }
whistleblower-core = { path = "../core" }

[dev-dependencies]
tempfile.workspace = true
whistleblower-mock-adapter = { path = "../adapters/mock" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
