[package]
name = "whistleblower-lez-adapter"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
borsh.workspace = true
nssa.workspace = true
nssa_core = { workspace = true, features = ["host"] }
wallet.workspace = true
common.workspace = true
sequencer_service_rpc = { workspace = true, features = ["client"] }
document-indexing = { path = "../../indexing" }
whistleblower-core = { path = "../../core" }
whistleblower-methods = { path = "../../methods" }
tokio = { version = "1", features = ["time"] }
thiserror.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
