[package]
name = "whistleblower-programs"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "whistleblower_registry"
path = "src/bin/whistleblower_registry.rs"

[dependencies]
# Raw nssa_core — we don't pull spel-framework here. IDL is generated
# from our source file separately via `spel generate-idl`.
nssa_core.workspace = true
risc0-zkvm.workspace = true
whistleblower-core = { path = "../../core" }
serde.workspace = true
borsh.workspace = true
